<!-- Copyright (C) 2013 the original author or authors. Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance 
    with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software 
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the 
    specific language governing permissions and limitations under the License. -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.xceptance</groupId>
    <artifactId>xcmailr</artifactId>
    <version>3.0.0</version>
    <packaging>pom</packaging>

    <name>XCMailr</name>
    <url>https://github.com/Xceptance/XCMailr</url>
    <inceptionYear>2013</inceptionYear>

    <modules>
        <module>xcmailr-webapp</module>
        <module>xcmailr-client</module>
        <module>xcmailr-load-test-suite</module>
    </modules>

    <properties>
        <!-- pin encoding to UTF-8 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <copyright>Copyright (c) ${project.inceptionYear}-2023 ${project.organization.name}</copyright>
        <license.skipFormat>true</license.skipFormat>
    </properties>


    <organization>
        <name>Xceptance Software Technologies GmbH</name>
        <url>https://www.xceptance.com/</url>
    </organization>

    <developers>
        <developer>
            <name>Xceptance Dev Team</name>
            <id>xceptance</id>
            <email>xlt.dev@xceptance.com</email>
            <organization>Xceptance Software Technologies GmbH</organization>
            <organizationUrl>http://www.xceptance.com/</organizationUrl>
            <timezone>+1</timezone>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/Xceptance/XCMailr</url>
        <connection>scm:git://github.com/Xceptance/XCMailr.git</connection>
        <developerConnection>scm:git:git@github.com:Xceptance/XCMailr.git</developerConnection>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/Xceptance/XCMailr/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
    </distributionManagement>

    <build>
        <plugins>
            <!-- Adds or updates the license header in source files. -->
            <!-- Usage: mvn license:format -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <header>../license-header.txt</header>
                    <properties>
                        <copyright>${copyright}</copyright>
                    </properties>
                    <includes>
                        <include>**/*.java</include>
                    </includes>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                    <skip>${license.skipFormat}</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
